# stereo_3d_tracking

./: .gitignore  Adding_pics.ipynb  Classifier.ipynb  README  README.dataset.txt  README.md  README.roboflow.txt  data.yaml  depth_image_manager.py  feature_manager.py  feature_manager_v2.py  frame_manager.py  frame_visualizer.py  kalman_filter.py  kalman_filter_3d.py  main.py  object_detection.py  package.xml  requirements.txt  setup.cfg  setup.py  val_test_model.ipynb  visualization_3d.py
.ipynb_checkpoints/: data-checkpoint.yaml
cost_matrices/: .~lock.cost_matrices_20241121_225744.csv#  cost_matrices_20241121_225141.csv  cost_matrices_20241121_225629.csv  cost_matrices_20241121_225744.csv
job2/: OUTPUT_FILE23241124.out  data_split.yaml  job2.sh  yolo_model_with_log.py
launch/: stereo_image_publish.launch.py
stereo_3d_tracking/: calibration_publisher_node.py  frame_publisher.py  image_publisher_node.py
test/labels/: 000000_png.rf.23124ef290a650f035d6ef8c48070803.txt  000006_png.rf.03327ccd955aa70d276bcd35fa9c66b5.txt  000012_png.rf.e257807330c4bd5cb4300e6d67779f99.txt  000019_png.rf.5a26dfa7f82c32cea671c9679f784284.txt  000024_png.rf.9adbf2e15a5c3049fd3a11103f90a417.txt  000033_png.rf.d222ba0ce287a1cb085c6102ce303698.txt  000034_png.rf.e50529c8bb4bc0d63da1fcdb60042c09.txt  000043_png.rf.60fe0bb79690b307cdf1e36e7b125b7b.txt  000044_png.rf.1b6af8bdfe84b703992906679569d12c.txt  (+739 more)
train/: labels.cache
valid/: labels.cache
valid1/: labels.cache
valid1/labels/: 000000.txt  (+352 more)
yolo_files/: data_split.yaml  test.py  yolo_model.py  yolo_model_with_log.py
(+7835 files in other folders)
