<?xml version="1.0"?>
<package format="3">
  <name>stereo_3d_tracking</name>
  <version>0.0.0</version>
  <description>ROS2 node to publish images from a directory</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv_python</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
